--- a/cli/project-template/.botfront/botfront.yml
+++ b/cli/project-template/.botfront/botfront.yml
@@ -1,6 +1,6 @@
 images:
   default:
-#    botfront: botfront/botfront:v1.0.5
+    botfront: communico/communico:swcc
     rasa: botfront/rasa-for-botfront:v2.3.3-bf.3
     duckling: botfront/duckling:latest
     mongo: mongo:latest
