--- a/cli/project-template/.botfront/botfront.yml
+++ b/cli/project-template/.botfront/botfront.yml
@@ -1,6 +1,6 @@
 images:
   default:
-    communico: communico/communico:swcc
+    communico: communico/communico:generic
     rasa: botfront/rasa-for-botfront:v2.3.3-bf.3
     duckling: botfront/duckling:latest
     mongo: mongo:latest
