--- a/cli/project-template/.communico/docker-compose-template.yml
+++ b/cli/project-template/.communico/docker-compose-template.yml
@@ -1,6 +1,6 @@
 ########################################################################
 # This file is used as a template for the docker-compose.yaml file     #
-# you will find at the root of your project when running `botfront up` #
+# you will find at the root of your project when running `communico up` #
 ########################################################################
 
 version: "3.0"
