--- a/botfront/private/defaults/public.yaml
+++ b/botfront/private/defaults/public.yaml
@@ -13,4 +13,4 @@ pipeline:
   - name: EntitySynonymMapper
 backgroundImages:
 #  - https://source.unsplash.com/collection/315548/2400x1500
-  - https://i.postimg.cc/pLxNkhz8/LoginBG.png
+  - /LoginBG.png
