background image hardcoded

--- a/botfront/private/defaults/public.yaml
+++ b/botfront/private/defaults/public.yaml
@@ -12,6 +12,4 @@ pipeline:
   - name: rasa_addons.nlu.components.intent_ranking_canonical_example_injector.IntentRankingCanonicalExampleInjector
   - name: EntitySynonymMapper
 backgroundImages:
-#  - https://source.unsplash.com/collection/315548/2400x1500
-#  - https://i.postimg.cc/pLxNkhz8/LoginBG.png
-  - /LoginBG.png
+  - LoginBG.png
